--- a/styles.css
+++ b/styles.css
@@ -1110,6 +1110,44 @@ img.loaded {
     min-width: 0;
     margin: 0 auto;
   }
+
+
+  .floating-logo {
+    top: 4vh;
+    left: 3vw;
+    width: 40px;
+    height: 40px;
+  }
+
+
+
+}
+
+
+@media (max-width: 1024px) {
+  .landing-grid {
+    margin-top: 100px;
+    grid-template-columns: 1fr;
+    gap: 24px;
+    max-width: 95vw;
+  }
+  
+  .landing-content {
+    max-width: 95vw;
+    min-width: 0;
+    margin: 0 auto;
+  }
+
+
+  .floating-logo {
+    top: 4vh;
+    left: 3vw;
+    width: 40px;
+    height: 40px;
+  }
+
+
+
 }
 
 /* Tablets */
@@ -1122,8 +1160,8 @@ img.loaded {
 
 
   .floating-logo {
-    top: 3.8vh;
-    left: 5vw;
+    top: 5vh;
+    left: 2.8vw;
     width: 40px;
     height: 40px;
   }
