--- a/styles.css
+++ b/styles.css
@@ -1146,6 +1146,25 @@ img.loaded {
     height: 40px;
   }
 
+  .answer-content {
+    min-width: 0;
+    width: 95vw;
+    box-sizing: border-box;
+    text-align: center;
+    text-align: left;
+    background-color: rgb(255, 255, 255);
+    padding:24px;
+    border-radius:24px;
+    height: 100%;
+    border-style: solid;
+    border-color: rgba(74, 60, 47, 0.15);
+    border-width: 1px;
+  transition: box-shadow .25s;
+    box-shadow:75px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
+   margin-bottom: 24px;
+   
+  }
+
 
 
 }
