--- a/styles.css
+++ b/styles.css
@@ -1149,6 +1149,7 @@ img.loaded {
   .answer-content {
     min-width: 0;
     width: 95vw;
+    max-width: 95vw;
     box-sizing: border-box;
     text-align: center;
     text-align: left;
@@ -1162,6 +1163,7 @@ img.loaded {
   transition: box-shadow .25s;
     box-shadow:75px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
    margin-bottom: 24px;
+   margin-top:8px;
    
   }
 
