--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ margin-top: 130px;
   grid-template-columns: 1fr 1fr;
   gap: 24px;
   justify-content: start;
-  align-items: start;
+  align-items: stretch;
   max-width: 900px;
   padding:  16px;
 }
@@ -84,7 +84,6 @@ margin-top: 130px;
   background-color: rgb(255, 255, 255);
   padding:24px;
   border-radius:24px;
-  height: 100%;
   border-style: solid;
   border-color: rgba(74, 60, 47, 0.15);
   border-width: 1px;
@@ -1674,7 +1673,7 @@ html {
 @media (max-width: 600px) {
   /* Floating logo adjustments */
   .floating-logo {
-    top: 4vh;
+    top: 5vh;
     left: 6.5vw;
     width: 48px;
     height: 48px;
