--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,8 @@ width: 20vw;  }
     font-size: 32px;
     font-weight: 700;
     margin-bottom: 8px;
-    color: #222;
+    color: #333;
+    line-height: 1;
   }
 
 
@@ -1379,7 +1380,7 @@ html {
   font-weight: 700;
   margin-bottom: 24px;
   color: #222;
-  line-height: 1.3;
+  line-height: 1.5;
 }
 
 .feature-info {
@@ -1544,8 +1545,17 @@ html {
   }
   
   .article-header h1 {
-    font-size: 32px;
+    font-size: 40px;
     line-height: 1.2;
+  }
+
+  h2 {
+    font-family: 'Bricolage Grotesque', sans-serif;
+    font-size: 28px;
+    font-weight: 700;
+    margin-bottom: 8px;
+    color: #333;
+    line-height: 1;
   }
   
   .image-grid {
