Update styles.css to change text alignment of .metric class from center to left for improved layout flexibility.

--- a/styles.css
+++ b/styles.css
@@ -1594,7 +1594,7 @@ html {
 }
 
 .metric {
-  /* Remove center alignment to allow individual element alignment */
+  text-align: left;
 }
 
 .metric-number {
