--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ body {
   }
 
 .landing-grid {
-margin-top: 130px;
+margin-top: calc(100vh * .25);
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 24px;
@@ -253,6 +253,8 @@ width: 20vw;  }
   font-weight: 700;
   margin-bottom: 16px;
   color: #222;
+  line-height: 1.3;
+ 
 }
 
  h2 {
@@ -462,6 +464,7 @@ border: 1px solid rgba(13, 11, 70, 0.05);
         font-weight: 800;
         margin-bottom: 0.5rem;
         color: #222;
+        
       }
       
  
@@ -498,6 +501,7 @@ border: 1px solid rgba(13, 11, 70, 0.05);
   .landing-content h1 {
     font-size: 32px;
     width:auto;
+    line-height: 1.5;
   }
 
   .landing-content {
@@ -570,8 +574,8 @@ border: 1px solid rgba(13, 11, 70, 0.05);
     border: .5px solid rgb(51, 51, 51, .15);
     border-style: solid;
     align-items: center;
-    width: 48px;
-    height:48px;
+    width: 50px;
+    height:50px;
   }
 
  
@@ -1933,7 +1937,7 @@ html {
 @media (max-width: 600px) {
   /* Floating logo adjustments */
   .floating-logo {
-    top: 6vh;
+    top: 5vh;
     left: 6.5vw;
     width: 48px;
     height: 48px;
